add foűűphotos about team, align and design them

--- a/index.html
+++ b/index.html
@@ -25,5 +25,26 @@
             <img class="antojito" src="./images/cazuela.jpg" alt="Foto de una cazuela rica">
         </div>
     </div>
+    <div class="team">
+        <div class="title">Este es nuestro equipo perfecto</div>
+        <div class="people">
+            <div class="information">
+                <img class="foto" src="./images/20210703_151555.jpg" alt="Marci y Yessi">
+                <div class="person">El problema con esos, que anque preparan muchas cazuelas Marci las toma.</div>
+            </div>
+            <div class="information">
+                <img class="foto" src="./images/20230717_230304.jpg" alt="Oscar">
+                <div class="person">Ese niño es como Checo Perey haciendo cazuelas</div>
+            </div>
+            <div class="information">
+                <img class="foto" src="./images/20230718_141543.jpg" alt="Mami">
+                <div class="person">Esa señorita de Dorantes le regaña a los niños si toman más que trabajan.</div>
+            </div>
+            <div class="information">
+                <img class="foto" src="./images/20230724_101520.jpg" alt="Papi">
+                <div class="person">Ese señor solo está riendo como Mami le está regañando a los niños</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
