add costumer feedback and start the last part

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <div class="information">
                 <img class="foto" src="./images/20230717_230304.jpg" alt="Oscar">
-                <div class="person">Ese niño es como Checo Perey haciendo cazuelas</div>
+                <div class="person">Ese niño es como Checo Perez haciendo cazuelas</div>
             </div>
             <div class="information">
                 <img class="foto" src="./images/20230718_141543.jpg" alt="Mami">
@@ -44,6 +44,22 @@
                 <img class="foto" src="./images/20230724_101520.jpg" alt="Papi">
                 <div class="person">Ese señor solo está riendo como Mami le está regañando a los niños</div>
             </div>
+        </div>
+    </div>
+    <div class="costumer">
+        <div class="feedback">
+            Estas fueron las mejores cazuelas de mi vida. Pusieron mucha tequila los dos weyes y nos emborrachamos con ellos. Ese segundo wes estaba lo mismo como en la foto aquí arriba. La mama les pegó porque se emborracharon pero yo les contrataría itra vez.
+        </div>
+        <div class="name">
+            Un borracho feliz
+        </div>
+    </div>
+    <div>
+        <div>
+            Llamanos ahorita!
+        </div>
+        <div>
+            O busca una fecha en nuestro calendario.
         </div>
     </div>
 </body>
