Finish the landing page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>México</title>
 </head>
 <body>
+    <div class="head">La cazuela de los Pérez</div>
     <div class="header">
         <div class="top">
             <img class="logo" src="./images/heart.jpg" alt="mexican heart">
@@ -54,13 +55,17 @@
             Un borracho feliz
         </div>
     </div>
+    <div class="calendario">
+        <div class="fecha">
+            <div class="title">Llamanos ahorita!</div>
+            <div >O busca una fecha en nuestro calendario.</div>
+        </div>
+            <button class="button button2">
+                Calendario
+            </button>
+    </div>
     <div>
-        <div>
-            Llamanos ahorita!
-        </div>
-        <div>
-            O busca una fecha en nuestro calendario.
-        </div>
+        <div class="footer">The México project 2023</div>
     </div>
 </body>
 </html>
