--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="costumer">
         <div class="feedback">
-            Estas fueron las mejores cazuelas de mi vida. Pusieron mucha tequila los dos weyes y nos emborrachamos con ellos. Ese segundo wes estaba lo mismo como en la foto aquí arriba. La mama les pegó porque se emborracharon pero yo les contrataría itra vez.
+            Estas fueron las mejores cazuelas de mi vida. Pusieron mucha tequila los dos weyes y nos emborrachamos con ellos. Ese segundo wes estaba lo mismo como en la foto aquí arriba. La mamá les pegó porque se emborracharon pero yo les contrataría otra vez.
         </div>
         <div class="name">
             Un borracho feliz
